# self-driving-car-nanodegree-nd013

./: .gitignore  README.md
p-11-path-planning/: CMakeLists-linux.txt  CMakeLists.txt  CMakeSettings.json  README.md  reflections.md
p-11-path-planning/src/: MPC.cpp  MPC.h  behavior_planner.cpp  behavior_planner.h  classifier.cpp  classifier.h  main.cpp  path.cpp  path.h
p-11-path-planning/src/backup/: main-backup.cpp  path-backup.cpp  path-backup.h
p-11-path-planning/windows-build/: path_planning.exp  path_planning.lib
p10-model-predictive-control/: CMakeLists.txt  README.md  changelog060617.txt
p10-model-predictive-control/CarND-MPC-Quizzes-master/mpc_to_line/src/: MPC.cpp
p10-model-predictive-control/quizes/: CMakeLists.txt  fit_polynomials.cpp  global_kinematic_model.cpp
p10-model-predictive-control/quizes/CarND-MPC-Quizzes-master/mpc_to_line/src/: MPC.cpp
p10-model-predictive-control/src/: MPC.cpp  MPC.h  main.cpp
p10-model-predictive-control/src-files-play-p11/: MPC.cpp  main.cpp  spline.h
p10-model-predictive-control/src/COIN-OR-1.8.0-win32-msvc12/COIN-OR/examples/Excel/: OSWebServiceGUI.xlsm  clsOSInstance.cls  clsws_OSSolverServiceServic.cls  parIncVBA.xlsm
p10-model-predictive-control/src/COIN-OR-1.8.0-win32-msvc12/COIN-OR/examples/algorithmicDiff/: Makefile  OSAlgorithmicDiffTest.cpp
p10-model-predictive-control/src/COIN-OR-1.8.0-win32-msvc12/COIN-OR/examples/branchCutPrice/: Makefile
p10-model-predictive-control/src/COIN-OR-1.8.0-win32-msvc12/COIN-OR/examples/cglCuts/: Makefile  OSCglCuts.cpp
p10-model-predictive-control/src/COIN-OR-1.8.0-win32-msvc12/COIN-OR/examples/instanceGenerator/: Makefile  OSInstanceGenerator.cpp
p10-model-predictive-control/src/COIN-OR-1.8.0-win32-msvc12/COIN-OR/examples/osDip/: Makefile  OSDipApp.cpp  OSDipApp.h  OSDipBlockSolver.cpp  OSDipBlockSolver.h  OSDipBlockSolverFactory.cpp  OSDipBlockSolverFactory.h  OSDipFactoryInitializer.h  OSDipInterface.cpp  OSDipInterface.h  OSDipParam.h  OSDip_Main.cpp  osdip.parm
p10-model-predictive-control/src/COIN-OR-1.8.0-win32-msvc12/COIN-OR/examples/osModificationDemo/: Makefile  OSModificationDemo.cpp
p10-model-predictive-control/src/COIN-OR-1.8.0-win32-msvc12/COIN-OR/examples/osRemoteTest/: Makefile  OSRemoteTest.cpp
p10-model-predictive-control/src/COIN-OR-1.8.0-win32-msvc12/COIN-OR/examples/osResultDemo/: Makefile  OSResultDemo.cpp
p10-model-predictive-control/src/COIN-OR-1.8.0-win32-msvc12/COIN-OR/examples/osSolverDemo/: Makefile  OSSolverDemo.cpp
p10-model-predictive-control/src/COIN-OR-1.8.0-win32-msvc12/COIN-OR/examples/template/: Makefile  template.cpp
p10-model-predictive-control/src/Ipopt-3.5.3/: Makefile.am  configure.ac
p10-model-predictive-control/src/Ipopt-3.5.3/BuildTools/: Makemain.inc  coin.m4  commit_new_release  prepare_new_release  run_autotools
p10-model-predictive-control/src/Ipopt-3.5.3/BuildTools/compile_f2c/: README  compile_f2c
p10-model-predictive-control/src/Ipopt-3.5.3/BuildTools/headers/: configall_system_msc.h
p10-model-predictive-control/src/Ipopt-3.5.3/BuildTools/share/: config.site
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/: Makefile.am  configure.ac
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/MSVisualStudio/libf2c/: arith.h  vcf2c.lib
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/MSVisualStudio/v8/: Ipopt.sln  README.TXT  UpgradeLog.htm
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/contrib/JavaInterface/: Makefile.in  jipopt.cpp
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/doc/: documentation.tex
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/examples/Cpp_example/: Makefile.in  MyNLP.cpp  cpp_example.cpp
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/examples/ScalableProblems/: LuksanVlcek1.cpp  LuksanVlcek1.hpp  LuksanVlcek2.cpp  LuksanVlcek2.hpp  LuksanVlcek3.cpp  LuksanVlcek3.hpp  LuksanVlcek4.cpp  LuksanVlcek4.hpp  LuksanVlcek5.cpp  LuksanVlcek5.hpp  LuksanVlcek6.cpp  LuksanVlcek6.hpp  LuksanVlcek7.cpp  LuksanVlcek7.hpp  Makefile.in  MittelmannBndryCntrlDiri.cpp  MittelmannBndryCntrlDiri.hpp  MittelmannBndryCntrlDiri3D.cpp  MittelmannBndryCntrlDiri3D.hpp  MittelmannBndryCntrlDiri3D_27.cpp  MittelmannBndryCntrlDiri3D_27.hpp  MittelmannBndryCntrlDiri3Dsin.cpp  MittelmannBndryCntrlDiri3Dsin.hpp  MittelmannBndryCntrlNeum.cpp  MittelmannBndryCntrlNeum.hpp  MittelmannDistCntrlDiri.cpp  MittelmannDistCntrlDiri.hpp  MittelmannDistCntrlNeumA.cpp  MittelmannDistCntrlNeumA.hpp  MittelmannDistCntrlNeumB.cpp  MittelmannDistCntrlNeumB.hpp  MittelmannParaCntrl.hpp  RegisteredTNLP.cpp  RegisteredTNLP.hpp  solve_problem.cpp
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/examples/hs071_c/: Makefile.in  hs071_c.c
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/examples/hs071_cpp/: Makefile.in  hs071_main.cpp  hs071_nlp.cpp  hs071_nlp.hpp
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/examples/hs071_f/: Makefile.in  hs071_f.f.in
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/src/Algorithm/: IpAdaptiveMuUpdate.cpp  IpAdaptiveMuUpdate.hpp  IpAlgBuilder.cpp  IpAlgBuilder.hpp  IpAlgStrategy.hpp  IpAlgorithmRegOp.cpp  IpConvCheck.hpp  (+95 more)
p10-model-predictive-control/src/Ipopt-3.5.3/Ipopt/test/: Makefile.am
p7-Unscented-Kalman-Filter/: CMakeLists.txt  CMakeSettings.json  README.md
p7-Unscented-Kalman-Filter/buildsx86-Debug/: data_in.txt  data_out.txt  output.txt
p7-Unscented-Kalman-Filter/quizes/UKF-Update/: main.cpp  ukf.cpp
p7-Unscented-Kalman-Filter/quizes/augmented-sigma-points/: main.cpp  ukf.cpp  ukf.h
p7-Unscented-Kalman-Filter/quizes/generate-sigma-points-1/: main.cpp  ukf.cpp
p7-Unscented-Kalman-Filter/quizes/predict-mean-covariance/: main.cpp  ukf.cpp
p7-Unscented-Kalman-Filter/quizes/radar-measurement/: main.cpp  ukf.cpp
p7-Unscented-Kalman-Filter/quizes/sigma-point-prediction/: main.cpp  ukf.cpp
p7-Unscented-Kalman-Filter/src/: tools.cpp  ukf.cpp  ukf.h
p8-kidnapped-vehicle/: CMakeLists.txt  test.cpp
p8-kidnapped-vehicle/quizes/: gaussian-sample.cpp
p8-kidnapped-vehicle/src/: helper_functions.h  particle_filter.cpp  particle_filter.h
(+665 files in other folders)
