# Copyright (C) 2004, 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id: Makefile.am 741 2006-06-15 17:11:15Z andreasw $

# Authors:  Carl Laird, Andreas Waechter     IBM    2004-08-13

AUTOMAKE_OPTIONS = foreign

SUBDIRS = CUTErInterface

if COIN_HAS_ASL
  SUBDIRS += AmplSolver
#  SUBDIRS += CompositeInterface
endif
